# license-header

./: CHANGELOG.md  LICENSE_HEADER  README.md  license-header.config.json  pyproject.toml
license_header/: __init__.py  apply.py  check.py  cli.py  config.py  reports.py  scanner.py  utils.py
tests/: test_apply.py  test_cli.py  test_config.py  test_scanner.py
